Module "Liste boutons" : correction Images en cas d'alignement (css) et correction de la réinitialisation du formulaire (styles)
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@87236 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/galaxie_melusine/melusine/trunk/css/style.css
+++ b/galaxie_melusine/melusine/trunk/css/style.css
@@ -533,9 +533,9 @@ overflow:hidden;
 	text-decoration:none
 }
 
-.en_lignedroite .item-logo a img{
+/*.en_lignedroite .item-logo a img{
 	height:90%;
-}
+}*/
 .en_lignedroite .item-logo:hover {
 	background-color:transparent!important;}
 	
@@ -554,9 +554,9 @@ overflow:hidden;
 	text-decoration:none
 }
 
-.en_lignegauche .item-logo a img{
+/*.en_lignegauche .item-logo a img{
 	height:90%;
-}
+}*/
 .en_lignegauche .item-logo:hover {
 	background-color:transparent!important;
 }
